Fixes #1808 (#1897)
Unless this is considered too small for the text in other buttons.

--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -45,7 +45,7 @@ a {
 }
 
 .btn {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
 
     .spinner-border {
         vertical-align: middle;
